Misc.  Changes Changed styling of assign beacon button Further highlight clickability of beacons in visualization page. Fixed overflow of elements in visualization page.

--- a/hospital-software/client/stylesheets/patient.css
+++ b/hospital-software/client/stylesheets/patient.css
@@ -20,3 +20,17 @@ h5{
 .row{
     border-bottom: 2px solid black;
   }
+
+#assignBtn{
+  border-radius:25px;
+  background-color:rgb(60, 164, 216);
+  padding: 15px;
+  border:0px;
+  margin:2px;
+  box-shadow: none;
+}
+
+#assignBtn:hover,
+#assignBtn:focus{
+    background-color:rgb(43, 119, 156);
+}
