--- a/hospital-software/client/stylesheets/visualization.css
+++ b/hospital-software/client/stylesheets/visualization.css
@@ -23,19 +23,39 @@ span {
 .infant {
   background-color: red;
 }
+.infant:hover,
+.infant:focus{
+  background-color: rgb(172, 0, 0);
+}
 .child {
   background-color: orange;
 }
+.child:hover,
+.child:focus{
+  background-color: rgb(181, 118, 0);
+}
 .adolescent {
   background-color: green;
+}
+.adolescent:hover,
+.adolescent:focus{
+  background-color: rgb(0, 73, 0);
 }
 
 .adult {
   background-color: blue;
 }
+.adult:hover,
+.adult:focus{
+  background-color: rgb(0, 0, 149);
+}
 
 .elderly {
   background-color:purple;
+}
+.elderly:hover,
+.elderly:focus{
+  background-color: rgb(88, 0, 88);
 }
 
 .assistance {
